tests/baselines/reference/assignmentCompatBetweenTupleAndArray.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatBetweenTupleAndArray.ts(17,1): error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
  Types of property 'pop' are incompatible.
    Type '() => string | number' is not assignable to type '() => number'.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatBetweenTupleAndArray.ts(18,1): error TS2322: Type '{}[]' is not assignable to type '[{}]'.
  Property '0' is missing in type '{}[]'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatBetweenTupleAndArray.ts (2 errors) ====
    var numStrTuple: [number, string];
    var numNumTuple: [number, number];
    var numEmptyObjTuple: [number, {}];
    var emptyObjTuple: [{}];
    
    var numArray: number[];
    var emptyObjArray: {}[];
    
    // no error
    numArray = numNumTuple;
    emptyObjArray = emptyObjTuple;
    emptyObjArray = numStrTuple;
    emptyObjArray = numNumTuple;
    emptyObjArray = numEmptyObjTuple;
    
    // error
    numArray = numStrTuple;
    ~~~~~~~~
!!! error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => string | number' is not assignable to type '() => number'.
!!! error TS2322:       Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    emptyObjTuple = emptyObjArray;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '{}[]' is not assignable to type '[{}]'.
!!! error TS2322:   Property '0' is missing in type '{}[]'.
    